# selfmade

./: BinaryTree.c  HashMap.c  HelloWindows.asm  HelloWindows.cc  README.md  UpperCase_Regex.js  arraylists.c  artist_model.cpp  artist_model.hpp  c_utils.h  comment_remove.sh  cuda.c  cuda_utils.h  data_template.h  des_kernel.h  fast.s  fastcode.cc  fetch.js  ff.cc  ffast.cc  game_engine.cc  invoked_call.cc  linkedList.c  quickSort.c  rule_of_five.cc  screenrc  syscall_kernel.hpp  verify.c
color-inverse/: CMakeLists.txt  README.md  install.sh
color-inverse/docs/: basic.md
color-inverse/example/: use_basic.cc
color-inverse/src/: CMakeLists.txt
color-inverse/src/function/: BlurApplier.cpp  BlurApplier.h  CMakeLists.txt  ColorInverter.cpp  ColorInverter.h  EdgeDetector.cpp  EdgeDetector.h  FrameSaver.cpp  FrameSaver.h  GrayscaleConverter.cpp  GrayscaleConverter.h  HistogramEqualizer.cpp  HistogramEqualizer.h  Resizer.cpp  Resizer.h  Rotator.cpp  Rotator.h  TextOverlay.cpp  TextOverlay.h  ThresholdApplier.cpp  ThresholdApplier.h  VideoProcessor.cpp  VideoProcessor.h
color-inverse/src/kernel/: CMakeLists.txt  README.md  kernel.cpp
color-inverse/template/: basic.cc  basic.ipynb  basic.py
crpto/: crypto_test.py  read  readme.md  tokens.json
crypto/: rename-empty
cuda/: readme.md
essey/: read  whatsthisfor.md  whattechitinvolved.md  whatwilltheframworkbe.md
information-voice_recognition/: README.md
machine-learning/: read  tensor_test.py  test.ipynb  test.py
vscode-extensions/: README.md  dark-green.py
wfrest/: BluePrint.cc  BluePrint.h  start_server.cc
(+13 files in other folders)
